# systemd-dashboard

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.Jules/: palette.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-detail-pane-mode-switching/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-HUMAN-UAT.md  01-VERIFICATION.md
benches/: ui_bench.rs
src/: app.rs  logging.rs  main.rs  systemd.rs  ui.rs  ui.rs.orig
