[package]
name = "systemd-dashboard"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "timers"
path = "src/main.rs"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
